--- a/src/block/editor.scss
+++ b/src/block/editor.scss
@@ -4,6 +4,7 @@
  * CSS for just Backend enqueued after style.scss
  * which makes it higher in priority.
  */
+@use '../common.scss' as *;
 
 .wp-block-dj-block-stock-information  {
   color: $black;
