--- a/src/block/style.scss
+++ b/src/block/style.scss
@@ -3,6 +3,7 @@
  *
  * CSS for both Frontend+Backend.
  */
+@use '../common.scss' as *;
 
 .wp-block-dj-stock-information, .wp-block-dj-block-stock-information  {
   color: $black;
